crates/git-reflow-cli/tests/snapshots/plan__plan_command.snap
---
source: crates/git-reflow-cli/tests/plan.rs
expression: "String::from_utf8_lossy(&assert.get_output().stdout)"
---
[
  {
    "package-name": "example-python-uv-workspace",
    "current-version": "1.0.0",
    "next-version": "1.1.0",
    "commit-message": "chore: release v1.1.0",
    "changelog-md": "## [1.1.0] - [DATE]\n\n### 🚀 Features\n\n- *(api)* Add a `subtract` function"
  },
  {
    "package-name": "example-api",
    "current-version": "1.0.0",
    "next-version": "1.1.0",
    "commit-message": "chore(example-api): release v1.1.0",
    "changelog-md": "## [1.1.0] - [DATE]\n\n### 🚀 Features\n\n- *(api)* Add a `subtract` function"
  }
]
